--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
   <header>
     <div class="container">
       <div class="header">
-        <a class="header__logo" href="go" rel="nofollow">
+        <div class="header__left">
+          <div class="burger">
+            <svg-icon-sprite _ngcontent-ng-c2768300191="" aria-hidden="true" src="burger-mobile" width="32" height="32" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="32" height="32"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#burger-mobile"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
+            <svg-icon-sprite _ngcontent-ng-c2768300191="" aria-hidden="true" src="close" width="32" height="32" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="32" height="32"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#close"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
+          </div>
           <svg-icon-sprite _ngcontent-ng-c2034973934="" aria-hidden="true" width="24" height="24" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="24" height="24"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#sidebar-opened"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
-          <picture>
-            <source srcset="assets/images/logo-mobile.svg" media="(max-width: 1024px)">
-            <img src="assets/images/logo.svg" alt="logo">
-          </picture>
-        </a>
+          <a class="header__logo" href="go" rel="nofollow">
+            <picture>
+              <source srcset="assets/images/logo-mobile.svg" media="(max-width: 1280px)">
+              <img src="assets/images/logo.svg" alt="logo">
+            </picture>
+          </a>
+        </div>
         <div class="header__right">
           <a class="header__search" href="go" rel="nofollow">
             <svg-icon-sprite _ngcontent-ng-c2768300191="" aria-hidden="true" src="search" width="16" height="16" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="16" height="16"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#search"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
@@ -35,6 +41,10 @@
   </header>
   <main>
     <section class="sidebar">
+      <a class="header__search" href="go" rel="nofollow">
+        <svg-icon-sprite _ngcontent-ng-c2768300191="" aria-hidden="true" src="search" width="16" height="16" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="16" height="16"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#search"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
+        <span>Juegos, Categorías, Proveedores</span>
+      </a>
       <div class="sidebar__menu">
         <ul class="sidebar__list">
           <li>
