--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <div class="cards__list">
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/1.svg">
+                    <img class="cards__item__img" src="assets/images/1.svg" alt="img1">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -318,7 +318,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/2.avif">
+                    <img class="cards__item__img" src="assets/images/2.avif" alt="img2">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -328,7 +328,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/3.svg">
+                    <img class="cards__item__img" src="assets/images/3.svg" alt="img3">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -338,7 +338,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/4.svg">
+                    <img class="cards__item__img" src="assets/images/4.svg" alt="img4">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -348,7 +348,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/5.avif">
+                    <img class="cards__item__img" src="assets/images/5.avif" alt="img5">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -358,7 +358,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/6.avif">
+                    <img class="cards__item__img" src="assets/images/6.avif" alt="img6">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -368,7 +368,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/7.svg">
+                    <img class="cards__item__img" src="assets/images/7.svg" alt="img7">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -392,7 +392,7 @@
               <div class="cards__list">
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/8.svg">
+                    <img class="cards__item__img" src="assets/images/8.svg" alt="img8">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -402,7 +402,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/9.avif">
+                    <img class="cards__item__img" src="assets/images/9.avif" alt="img9">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -412,7 +412,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/10.avif">
+                    <img class="cards__item__img" src="assets/images/10.avif" alt="img10">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -422,7 +422,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/11.avif">
+                    <img class="cards__item__img" src="assets/images/11.avif" alt="img11">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -432,7 +432,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/12.svg">
+                    <img class="cards__item__img" src="assets/images/12.svg" alt="img12">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -442,7 +442,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/7.svg">
+                    <img class="cards__item__img" src="assets/images/7.svg" alt="img13">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
@@ -452,7 +452,7 @@
                 </a>
                 <a class="cards__item" href="go" rel="nofollow">
                   <div class="cards__item__body">
-                    <img class="cards__item__img" src="assets/images/13.avif">
+                    <img class="cards__item__img" src="assets/images/13.avif" alt="img4">
                     <div class="cards__item__nav">
                       <svg-icon-sprite _ngcontent-ng-c1282799793="" src="play-button" width="56" height="56" aria-hidden="true" _nghost-ng-c2813361619=""><svg _ngcontent-ng-c2813361619="" class="icon" width="56" height="56"><!----><use _ngcontent-ng-c2813361619="" xlink:href="assets/sprite.svg#play-button"></use></svg><!----><!----><!----><!----><!----><!----></svg-icon-sprite>
                       <span>Demo</span>
